kubernetes/bankapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp-namespace
  labels:
    app: bankapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Optional: Use NLB for better performance
spec:
  type: LoadBalancer  # Changed to LoadBalancer
  selector:
    app: bankapp-deploy
  ports:
    - protocol: TCP
      port: 8080       # Expose on port 8080
      targetPort: 8080  # Target the app's port
